# TgWorker

./: .env.example  README.md  alembic.ini  pyproject.toml
apps/common/: config.py  db.py  logging.py  models.py  telegram_client.py
apps/tg_listener/: main.py
apps/tg_sender/: __init__.py  main.py  service.py
apps/worker/: main.py
deploy/: docker-compose.yml
migrations/: env.py
migrations/versions/: 20260301_0001_init.py  20260301_0002_messages_in_dedup.py
scripts/: seed.py  telegram_login.py
